# quilix

./: .gitignore  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bunfig.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
crates/quilix-cli/: Cargo.toml
crates/quilix-cli/src/: main.rs
crates/quilix-cli/src/commands/: add.rs  app.rs  build.rs  dev.rs  generate.rs  lint.rs  mod.rs  preview.rs  templates.rs  utils.rs  validation.rs
crates/quilix-config/: Cargo.toml
crates/quilix-config/src/: config.rs  lib.rs  parse.rs
crates/quilix-mf/: Cargo.toml
crates/quilix-mf/src/: builder.rs  federated_import.rs  lib.rs
crates/quilix-router/: Cargo.toml
crates/quilix-router/src/: routes.rs
crates/quilix-utils/: Cargo.toml
crates/quilix-utils/src/: file.rs  lib.rs  path.rs
examples/basic/: biome.json  package.json  quilix.config.ts  rspack.config.mjs  tsconfig.json
examples/basic/app/: entry.tsx  page.tsx
examples/basic/app/api/hello/: route.ts
examples/basic/app/components/: Button.tsx
examples/micro-fe/: README.md
examples/micro-fe/host/: package.json  quilix.config.ts  rspack.config.mjs
examples/micro-fe/host/app/: bootstrap.tsx  page.tsx
examples/micro-fe/host/public/: index.html
examples/micro-fe/remote/: package.json  quilix.config.ts  rspack.config.mjs
examples/micro-fe/remote/app/: bootstrap.tsx  page.tsx
examples/micro-fe/remote/app/components/: Button.tsx
examples/micro-fe/remote/public/: index.html
