[workspace]
members = [
    "crates/quilix-cli",
    "crates/quilix-config",
    "crates/quilix-mf",
    "crates/quilix-router",
    "crates/quilix-utils",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Vincent"]
license = "MIT"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
bytes = "1.11"
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
dirs = "6.0"
futures-util = "0.3"
glob = "0.3"
handlebars = "6.4.0"
indicatif = "0.18"
notify = "8.2"
quilix-config = { path = "crates/quilix-config" }
quilix-mf = { path = "crates/quilix-mf" }
quilix-router = { path = "crates/quilix-router" }
quilix-utils = { path = "crates/quilix-utils" }
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "36.0.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
which = "8.0"
