[package]
name = "quilix-router"
version.workspace = true
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
quilix-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
